--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
+/* Import the Ubuntu font from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
 /* Mobile-First Styles (Default) */
+* {
+  font-family: "Ubuntu", sans-serif;
+}
+
 body {
   min-height: 100vh;
   min-width: 100vw;
@@ -35,6 +42,8 @@ p {
   color: white;
   margin: 10px 0;
   cursor: pointer;
+  line-height: 0;
+  text-align: center;
 }
 
 #lowestScore {
@@ -49,9 +58,7 @@ p {
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  /* Allow cards to wrap to the next line */
   justify-content: center;
-  /* Center-align the cards */
 }
 
 .card {
@@ -60,7 +67,6 @@ p {
   width: 140px;
   height: 180px;
   margin: 10px;
-  /* Adjust the margin for mobile */
   cursor: pointer;
   transform-style: preserve-3d;
   transition: all 0.5s ease-in-out;
